--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <li>Download of photo, video (only tumblr.com hosted), text, audio, quote, conversation, link and question posts.</li>
 <li>Download meta information for photo, video and audio posts.</li>
 <li>Downloads inlined photos and videos (e.g. photos embedded in question&amp;answer posts).</li>
-<li>Download of _raw image files (original/higher resolution pictures).</li>
+<li>Download of all image sizes possible (SVC, API only for newer blogs, higher resolution not possible for old blogs *1).</li>
 <li>Support for downloading Imgur, Gfycat, Webmshare, Mixtape, Lolisafe, Uguu, Catbox and SafeMoe linked files in tumblr posts.</li>
 <li>Download of safe mode/NSFW blogs.</li>
 <li>Allows to download only original content of the blog and skip reblogged posts.</li>
@@ -91,7 +91,7 @@
 
 <ul>
 <li>A downloader for downloading &ldquo;liked by&rdquo; photos and videos instead of a tumblr blog (e.g. <a href="https://www.tumblr.com/liked/by/wallpaperfx/">https://www.tumblr.com/liked/by/wallpaperfx/</a>) (login required).</li>
-<li>Download of _raw image files (original/higher resolution pictures).</li>
+<li>Download of all image sizes possible (SVC, API only for newer blogs, higher resolution not possible for old blogs *1).</li>
 <li>Allows to download posts in a defined time span.</li>
 </ul>
 
@@ -99,7 +99,7 @@
 
 <ul>
 <li>A downloader for downloading photos and videos from the tumblr search (e.g. <a href="http://www.tumblr.com/search/my+keywords">http://www.tumblr.com/search/my+keywords</a>).</li>
-<li>Download of _raw image files (original/higher resolution pictures).</li>
+<li>Download of all image sizes possible (SVC, API only for newer blogs, higher resolution not possible for old blogs *1).</li>
 <li>Can download only specific blog pages instead of the whole blog.</li>
 </ul>
 
@@ -107,9 +107,11 @@
 
 <ul>
 <li>A downloader for downloading photos and videos from the tumblr tag search (e.g. <a href="http://www.tumblr.com/tagged/my+keywords">http://www.tumblr.com/tagged/my+keywords</a>) (login required).</li>
-<li>Download of _raw image files (original/higher resolution pictures).</li>
+<li>Download of all image sizes possible (SVC, API only for newer blogs, higher resolution not possible for old blogs *1).</li>
 <li>Allows to download posts in a defined time span.</li>
 </ul>
+
+<i>*1 [Tumblr raw image files are inaccessible as of August 10, 2018](https://github.com/johanneszab/TumblThree/issues/261)</i>
 
 <p><a name="usage"></a></p>
 
