--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <li>Allows to download posts in a defined time span.</li>
 </ul>
 
-<i>*1 [Tumblr raw image files are inaccessible as of August 10, 2018](https://github.com/johanneszab/TumblThree/issues/261)</i>
+<i>*1 <a href="https://github.com/johanneszab/TumblThree/issues/261">Tumblr raw image files are inaccessible as of August 10, 2018</a></i>
 
 <p><a name="usage"></a></p>
 
