--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <li>Source code at github (Written in C# using WPF and MVVM).</li>
 <li>Multiple concurrent downloads of a single blog.</li>
 <li>Multiple concurrent downloads of different blogs.</li>
-<li>Internationalization support (currently available: en, zh, ru, de, fr).</li>
+<li>Internationalization support (currently available: en, de, es, fr, ru, zh).</li>
 <li>A download queue.</li>
 <li>Autosave of the queuelist.</li>
 <li>Save, clear and restore the queuelist.</li>
