--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <li><a href="#usage">Usage</a></li>
 <li><a href="#started">Getting Started</a></li>
 <li><a href="#insight">Further Insights</a></li>
+<li><a href="#information">For questions and more information</a></li>
 <li><a href="#download">Download</a></li>
 </ul>
 
@@ -219,6 +220,13 @@
 <li>MaxNumberOfRetries: Sets the maximum number of retries if a tumblr server forcefully closes the connection. This might regularly happen on the tumblr video host (vt.tumblr.com) if too many connections were opened in parallel. After the limit is exhausted, the file is left truncated, but is also not registered as a successful downloaded. Thus, the file can be resumed in the next crawl.</li>
 </ul></li>
 </ul>
+
+<p><a name="information"></a></p>
+
+<h2 id="download">For questions and more information:</h2>
+
+For questions, bug reports and feature requests go to our <a href="https://github.com/TumblThreeApp/TumblThree/issues">Issues section</a>.
+Further information can also be found in the <a href="https://github.com/TumblThreeApp/TumblThree/wiki">TumblThree Wiki</a>.
 
 <p><a name="download"></a></p>
 
