--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@ Further information can also be found in the <a href="https://github.com/TumblTh
 <h2 id="download">Download:</h2>
 
 <ul>
-<li><a href="https://github.com/TumblThreeApp/TumblThree/releases"><strong>Application downloads</strong> for Windows at Github.com</a></li>
-<li><a href="https://github.com/TumblThreeApp/TumblThree"><strong>Source code</strong> at Github.com (Written in C# using WPF and the MVVM pattern).</a></li>
+<li><a href="https://github.com/TumblThreeApp/TumblThree/releases"><strong>Application downloads</strong></a> for Windows at Github.com</li>
+<li><a href="https://github.com/TumblThreeApp/TumblThree"><strong>Source code</strong></a> at Github.com (Written in C# using WPF and the MVVM pattern).</li>
 </ul>
 
 		</div>
