--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
 <h1 id="tumblthree-a-tumblr-backup-application">TumblThree - A Tumblr Backup Application</h1>
 
-<p>TumblThree is the code rewrite of <a href="https://github.com/johanneszab/TumblTwo">TumblTwo</a>, a free and open source Tumblr blog backup application, using C# with WPF and the MVVM pattern. It uses the <a href="https://github.com/jbe2277/waf">Win Application Framework (WAF)</a>. It downloads photo, video, audio and text posts from a given tumblr blog.</p>
+<p>TumblThree is a free and open source Tumblr blog backup application. It downloads photo, video, audio and text posts from a given tumblr blog.<br/>
+It is the code rewrite of <a href="https://github.com/johanneszab/TumblTwo">TumblTwo</a>, using the <a href="https://github.com/jbe2277/waf">Win Application Framework (WAF)</a> and C# with WPF and the MVVM pattern.</p>
 
 <h2 id="screenshots">Screenshots:</h2>
 
@@ -62,13 +63,16 @@
 <li>A clipboard monitor that detects <em>blogname.tumblr.com</em> urls in the clipboard (copy and paste) and automatically adds the blog to the bloglist.</li>
 <li>A settings panel (change download location, turn preview off/on, define number of concurrent downloads, set the imagesize of downloaded pictures, set download defaults, enable portable mode, etc.).</li>
 <li>Uses Windows proxy settings.</li>
+<li>Allows to set a http proxy.</li>
 <li>A bandwidth throttler.</li>
 <li>An option to download an url list instead of the actual files.</li>
 <li>Set a start time for a automatic download (e.g. during nights).</li>
 <li>An option to skip the download of a file if it has already been downloaded before in any currently added blog.</li>
+<li>Change the blog settings of multiple selected blogs at once.</li>
 <li>Uses SSL connections.</li>
 <li>Preview of photos &amp; videos.</li>
 <li>Taskbar buttons and key bindings.</li>
+<li>File rename functionality.</li>
 </ul>
 
 <h3 id="blog-backup-download">Blog backup/download:</h3>
