--- a/index_new.html
+++ b/index_new.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
         <style>
-            html{
-                scroll-padding-top: 65px;
+html{
+  scroll-padding-top: 65px;
 }
-            body {
+body {
   font-family: Arial, Helvetica, sans-serif;
   height:fit-content;
   width: fit-content;
@@ -152,7 +151,12 @@ display:block;
 z-index:999;
 }
         </style>
-        <title> TumblThree - A Tumblr Backup Application</title>
+        <title>TumblThree - A Tumblr Blog Backup Application</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="TumblThree - A Tumblr Blog Backup Application" />
+        <meta property="og:description" content="TumblThree is a free and open source Tumblr blog backup application. It downloads photo, video, audio and text posts from a given tumblr blog." />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://tumblthreeapp.github.io/TumblThree/" />
     </head>
     <body>
     <header>
@@ -196,7 +200,7 @@ z-index:999;
             tumblr blog. It is the code rewrite of <a href="https://github.com/johanneszab/TumblTwo"
                 >TumblTwo</a>, using the <a href="https://github.com/jbe2277/waf">Win Application
                 Framework (WAF)</a> and C# with WPF and the MVVM pattern.</p>
-                <a href="https://raw.githubusercontent.com/Manasi-Kelkar/tumblthreeapp.github.io/master/images/getting-started.PNG" target="_blank"><img src="https://manasi-kelkar.github.io/tumblthreeapp.github.io/images/getting-started.PNG" alt="Getting Started" class="center"></a>
+                <a href="images/getting-started.PNG" target="_blank"><img src="images/getting-started.PNG" alt="Getting Started" class="center"></a>
         <h2 id="features">Features</h2><ul>
             <li> Source code at GitHub (Written in C# using WPF and MVVM). </li>
             <li> Multiple concurrent downloads of a single blog. </li>
@@ -287,7 +291,7 @@ z-index:999;
                 </ul>
             </li><br>
         </ul>
-        <a href="https://github.com/johanneszab/TumblThree/issues/261">1 Tumblr raw image files are
+        <a href="https://github.com/johanneszab/TumblThree/issues/261">*1 Tumblr raw image files are
             inaccessible as of August 10, 2018.</a>
         <h2 id="programusage">Program Usage:</h2><ul>
             <li> Extract the .zip file and run the application by double clicking TumblThree.exe. </li><br>
@@ -301,7 +305,7 @@ z-index:999;
                         the clipboard monitor from TumblThree will detect it and automatically add
                         the blog.</li><br>
                 </ul>
-                <a href="https://raw.githubusercontent.com/Manasi-Kelkar/tumblthreeapp.github.io/master/images/how-to-add-a-blog.png" target="_blank"><img src="https://manasi-kelkar.github.io/tumblthreeapp.github.io/images/how-to-add-a-blog.png" alt="How to add a blog" class="center"></a>
+                <a href="images/how-to-add-a-blog.png" target="_blank"><img src="images/how-to-add-a-blog.png" alt="How to add a blog" class="center"></a>
             </li>
             <li>
                 <h4 id="howtodwnldablog">How to download a blog?</h4>
@@ -313,7 +317,7 @@ z-index:999;
                         drop first and then click "Crawl", or you start the download process first
                         and add blogs to the queue afterwards.</li>
                 </ol><br>
-                <a href="https://raw.githubusercontent.com/Manasi-Kelkar/tumblthreeapp.github.io/master/images/how-to-download-a-blog.png" target="_blank"><img src="https://manasi-kelkar.github.io/tumblthreeapp.github.io/images/how-to-download-a-blog.png" alt="How to download a blog" class="center"></a>
+                <a href="images/how-to-download-a-blog.png" target="_blank"><img src="images/how-to-download-a-blog.png" alt="How to download a blog" class="center"></a>
             </li>
             <li>
                 <h4 id="howtodetectstateoftheblog">How to detect state of the blog?</h4>
@@ -352,8 +356,8 @@ z-index:999;
                         sign.(e.g. great big car, bears would search for images that are tagged for
                         either a great big car or bears or both.)</li><br>
                 </ol>
-                <a href="https://raw.githubusercontent.com/Manasi-Kelkar/tumblthreeapp.github.io/master/images/how-to-download-only-tagged-posts.png" target="_blank">
-<img src="https://manasi-kelkar.github.io/tumblthreeapp.github.io/images/how-to-download-only-tagged-posts.png" alt="How to download only tagged posts" class="center"></a>
+                <a href="images/how-to-download-only-tagged-posts.png" target="_blank">
+<img src="images/how-to-download-only-tagged-posts.png" alt="How to download only tagged posts" class="center"></a>
             </li>
         </ul>
         <ul>
@@ -363,7 +367,7 @@ z-index:999;
                     <li>Add the blog url.</li>
                     <li>Open the blog in the "Details" tab, enter the password in the "Password" textbox.</li><br>
                 </ol>
-                <a href="https://raw.githubusercontent.com/Manasi-Kelkar/tumblthreeapp.github.io/master/images/how-to-download-password-protected-blogs.png" target="_blank"><img src="https://manasi-kelkar.github.io/tumblthreeapp.github.io/images/how-to-download-password-protected-blogs.png" alt="How to download password protected blogs" class="center"></a>
+                <a href="images/how-to-download-password-protected-blogs.png" target="_blank"><img src="images/how-to-download-password-protected-blogs.png" alt="How to download password protected blogs" class="center"></a>
             </li>
             <li>
                 <h4 id="howtodwnldhiddenblogs">How to download hidden blogs (login required blogs)?</h4>
@@ -376,7 +380,7 @@ z-index:999;
                         %LOCALAPPDATA%\TumblThree in json format).</li>
                     <li>Add the blog url.</li>
                    </ol>
-                 <a href="https://raw.githubusercontent.com/Manasi-Kelkar/tumblthreeapp.github.io/master/images/how-to-download-hidden-blogs.png" target="_blank"><img src="https://manasi-kelkar.github.io/tumblthreeapp.github.io/images/how-to-download-hidden-blogs.png" alt="How to download hidden blogs (login required blogs)" class="center"></a>
+                 <a href="images/how-to-download-hidden-blogs.png" target="_blank"><img src="images/how-to-download-hidden-blogs.png" alt="How to download hidden blogs (login required blogs)" class="center"></a>
             </li><br>
             <li>
                 <h4 id="howtodwnldlikedphotosandvideos">How to download "liked" photos and videos?</h4>
@@ -432,7 +436,7 @@ z-index:999;
         <ul>
             <li> General -\&gt; Download location: Specifies where to download the files. The
                 default is in a folder Blogs relative to the TumblThree.exe </li>
-                <a href="https://raw.githubusercontent.com/Manasi-Kelkar/tumblthreeapp.github.io/master/images/blog-location.png" target="_blank"><img src="https://manasi-kelkar.github.io/tumblthreeapp.github.io/images/blog-location.png" alt="Blog location" class="center"></a>
+                <a href="images/blog-location.png" target="_blank"><img src="images/blog-location.png" alt="Blog location" class="center"></a>
             <li> Blog -\&gt; Settings applied to each blog upon addition: <ul>
                     <li>Here you can set what posts, newly added blogs will download per default.
                         <ol>
@@ -441,7 +445,7 @@ z-index:999;
                             <li>Select the &quot;Details&quot; tab on the right and change
                                 the settings.</li>   
                         </ol>
-                <a href="https://raw.githubusercontent.com/Manasi-Kelkar/tumblthreeapp.github.io/master/images/blog-setting.png" target="_blank"><img src="https://manasi-kelkar.github.io/tumblthreeapp.github.io/images/blog-setting.png" alt="Blog Setting" class="center"></a>
+                <a href="images/blog-setting.png" target="_blank"><img src="images/blog-setting.png" alt="Blog Setting" class="center"></a>
                 </li>
                 </ul>
                 <ul>
@@ -527,5 +531,7 @@ z-index:999;
                 Wiki</a>.</li>
         </ul>
     </section>
+	<br />
+	<br />
     </body>
 </html>
