added canonical tag

--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@ section {
         <meta property="og:description" content="TumblThree is a free and open source Tumblr blog backup application. It downloads photo, video, audio and text posts from a given tumblr blog." />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://tumblthreeapp.github.io/TumblThree/" />
+        <link rel="canonical" href="https://tumblthreeapp.github.io/TumblThree/" />
     </head>
     <body>
     <header>
