--- a/index.html
+++ b/index.html
@@ -1,392 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>TumblThree - A Tumblr Blog Backup Application</title>
+        <title>TumblThree - A Tumblr and Twitter Blog Backup Application</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google-site-verification" content="M64ZOoybZAnz8pHZlU7U13UlWu0j-a2VuoFIpy87cyM" />
-        <meta property="og:title" content="TumblThree - A Tumblr Blog Backup Application" />
-        <meta property="og:description" content="TumblThree is a free and open source Tumblr blog backup application. It downloads photo, video, audio and text posts from a given tumblr blog." />
+        <meta property="og:title" content="TumblThree - A Tumblr and Twitter Blog Backup Application" />
+        <meta property="og:description" content="TumblThree is a free and open source Tumblr and Twitter blog backup application. It downloads photo, video, audio and text posts from a given tumblr blog." />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://tumblthreeapp.github.io/TumblThree/" />
         <link rel="canonical" href="https://tumblthreeapp.github.io/TumblThree/" />
-        <style>
-html {
-  scroll-padding-top: 65px;
-}
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  height:fit-content;
-  width: fit-content;
-}
-
-.navbar {
-  background-color: rgb(92, 81, 190);
-  position: fixed;
-  top:0;
-  left:0;
-  right:0;
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 80px;
-  text-decoration: none;
-  
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 80px;
-  background-color:  rgb(92, 81, 190);;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: rgb(128, 98, 177);
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: rgb(128, 98, 177);;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown1 {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown1 .dropbtn1 {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 80px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown1:hover .dropbtn1 {
-  background-color:  rgb(128, 98, 177);;
-}
-
-.dropdown-content1 {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content1 a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content1 a:hover {
-  background-color:  rgb(128, 98, 177);;
-}
-
-.dropdown1:hover .dropdown-content1 {
-  display: block;
-}
-
-section {
-margin-top: 60px;
-left:0;
-right:5px;
-}
-
-section h2{
-  color: rgb(92, 81, 190);
-}
-
-section h4{
-  color: rgb(92, 81, 190);
-}
-.center{
-    display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width:40%;
-  height:40%;
-}
-.center:hover{
-position:relative;
-top:-25px;
-left:-35px;
-width:fit-content;
-height:fit-content;
-display:block;
-z-index:999;
-}
-
-@media screen and (max-width:900px) {
-section {
-  margin-top: 40px;
-}
-.navbar {
-  background-color: rgb(92, 81, 190);
-  position: fixed;
-  top:0;
-  left:0;
-  right:0;
-}
-
-.navbar a {
-  float: left;
-  font-size:10px;
-  color: white;
-  text-align: center;
-  padding: 8px 10px;
-  text-decoration: none;   
-}
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 10px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 8px 10px;
-  background-color:  rgb(92, 81, 190);;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: rgb(128, 98, 177);
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 80px;
-  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 8px 10px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: rgb(128, 98, 177);;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown1 {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown1 .dropbtn1 {
-  font-size: 10px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 8px 10px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown1:hover .dropbtn1 {
-  background-color:  rgb(128, 98, 177);;
-}
-
-.dropdown-content1 {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 80px;
-  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content1 a {
-  float: none;
-  color: black;
-  padding: 8px 10px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content1 a:hover {
-  background-color:  rgb(128, 98, 177);;
-}
-
-.dropdown1:hover .dropdown-content1 {
-  display: block;
-}
-
-}
-
-@media screen and (min-width:900px) and (max-width:1540px) {
-section {
-  margin-top: 50px;
-}
-.navbar {
-  background-color: rgb(92, 81, 190);
-  position: fixed;
-  top:0;
-  left:0;
-  right:0;
-}
-
-.navbar a {
-  float: left;
-  font-size:12px;
-  color: white;
-  text-align: center;
-  padding: 12px 40px;
-  text-decoration: none;   
-}
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 12px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 12px 40px;
-  background-color:  rgb(92, 81, 190);;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: rgb(128, 98, 177);
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 80px;
-  box-shadow: 0px 10px 12px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 40px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: rgb(128, 98, 177);;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown1 {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown1 .dropbtn1 {
-  font-size: 12px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 12px 40px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown1:hover .dropbtn1 {
-  background-color:  rgb(128, 98, 177);;
-}
-
-.dropdown-content1 {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 10px 12px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content1 a {
-  float: none;
-  color: black;
-  padding: 12px 40px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content1 a:hover {
-  background-color:  rgb(128, 98, 177);;
-}
-
-.dropdown1:hover .dropdown-content1 {
-  display: block;
-}
-
-}
-        </style>
+        <link rel="stylesheet" type="text/css" href="css/main2.css" />
     </head>
     <body>
     <header>
@@ -434,7 +57,7 @@ section {
                 Framework (WAF)</a> and C# with WPF and the MVVM pattern.</p>
         <p>More information can also be found on our <a href="https://github.com/TumblThreeApp/TumblThree">project site</a> on GitHub!</p>
                 <a href="images/getting-started.PNG" target="_blank"><img src="images/getting-started.PNG" alt="Getting Started" class="center"></a>
-        <div style="margin-top: 20px; height: 30px; display:flex; align-items:center;"><img valign="middle" src="icon/label_new_yellow.png" alt="new" height="30"/>&nbsp;&nbsp; TumblThree 2.0 - Now with Twitter blog downloader!</div>
+        <div style="margin-top: 20px; height: 30px; display:flex; align-items:center;"><img src="icon/label_new_yellow.png" alt="new" height="30"/>&nbsp;&nbsp; TumblThree 2.0 - Now with Twitter blog downloader!</div>
         <h2 id="features">Features</h2><ul>
             <li> Source code at GitHub (Written in C# using WPF and MVVM). </li>
             <li> Multiple concurrent downloads of a single blog. </li>
@@ -592,8 +215,8 @@ section {
                 <ul>
                 <li>View statistics of your blog and set the blog specific options.</li> 
                 <li>Check the post type (photo,video,audio,text,conversation,quote and link) to download.</li>
-                </li><br>
-            </ul> 
+                </ul><br>
+            </li> 
             <li>
                 <h4 id="howtodwnldonlytaggedposts">How to download only tagged posts?</h4>
                 <ol>
@@ -733,7 +356,7 @@ section {
                         missing downloads.</li>
                 </ul></li>
         </ul>
-        </ul><strong>Note: All the following files are stored in json format and can be opened in any
+        <strong>Note: All the following files are stored in json format and can be opened in any
             editor.</strong><ul>
             <li> Application settings are stored in <strong>C:\Users\&lt;Username&gt;\AppData\Local\TumblThree</strong>. </li>
             <li> You can use the portable mode (settings&gt;general) to stores the application
