Fix mobile-friendly issues

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://tumblthreeapp.github.io/TumblThree/" />
         <link rel="canonical" href="https://tumblthreeapp.github.io/TumblThree/" />
-        <link rel="stylesheet" type="text/css" href="css/main2.css" />
+        <link rel="stylesheet" type="text/css" href="css/main3.css" />
     </head>
     <body>
     <header>
@@ -371,15 +371,15 @@
                 view all TumblThree settings by opening the settings.json in any editor located in
                 <strong>C:\Users\&lt;Username&gt;\AppData\Local\TumblThree</strong>. Their names should be self explainatory. </li><br>
         </ul><h2 id="dwnld">Download:</h2><ul>
-            <li><a href="https://github.com/TumblThreeApp/TumblThree/releases">Application
+            <li><a href="https://github.com/TumblThreeApp/TumblThree/releases" class="down">Application
                     downloads</a> for Windows at Github.com</li>
-            <li><a href="https://github.com/TumblThreeApp/TumblThree">Source code</a> at Github.com
+            <li><a href="https://github.com/TumblThreeApp/TumblThree" class="up">Source code</a> at Github.com
                 (Written in C# using WPF and the MVVM pattern).</li>
         </ul><h2 id="feedback">Feedback</h2><ul>
             <li>For questions, bug reports and feature requests go to our <a
-                    href="https://github.com/TumblThreeApp/TumblThree/issues">Issues section</a>.
+                    href="https://github.com/TumblThreeApp/TumblThree/issues" class="down">Issues section</a>.
                 Further information can also be found in the <a
-                    href="https://github.com/TumblThreeApp/TumblThree/wiki">TumblThree
+                    href="https://github.com/TumblThreeApp/TumblThree/wiki" class="up">TumblThree
                 Wiki</a>.</li>
         </ul>
     </section>
