--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
             <li> Preview of photos &amp; videos. </li>
             <li> Taskbar buttons and key bindings. </li>
             <li> File rename functionality. </li>
-            <li> <g-emoji class="g-emoji" alias="star" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2b50.png">⭐</g-emoji> Download of Twitter blogs 🆕 </li><br>
+            <li> <g-emoji class="g-emoji" alias="star" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2b50.png">⭐</g-emoji> Download of Twitter blogs 🆕 </li>
+            <li> Image viewer with slideshow mode 🆕 </li>
+            <li> Automated update process 🆕 </li><br>
             <li>
                 <h4 id="blogbackupdownload">Blog backup/download:</h4>
                 <ul>
