added feedback page

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         </ul><h2 id="feedback">Feedback</h2><ul>
             <li>For questions, bug reports and feature requests go to our <a
                     href="https://github.com/TumblThreeApp/TumblThree/issues" class="down">Issues section</a>.
-                Further information can also be found in the <a
+                Further information can also be found on our <a href="https://github.com/TumblThreeApp/TumblThree">project start page</a> and in the <a
                     href="https://github.com/TumblThreeApp/TumblThree/wiki" class="up">TumblThree
                 Wiki</a>.</li>
         </ul>
