--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
     <section>
         <h2 id="gettingstarted">Getting Started</h2>
-        <p><a href="https://github.com/TumblThreeApp/TumblThree">TumblThree</a> is a free and open source Tumblr
+        <p><a href="https://github.com/TumblThreeApp/TumblThree">TumblThree</a> is a free and open source Tumblr and Twitter
             blog backup application. It downloads photo, video, audio and text posts from a given
             tumblr blog. <a href="https://twitter.com/intent/tweet?text=Check%20out%20TumblThree%20-%20A%20Tumblr%20Blog%20Backup%20Application%0AIt%20downloads%20photo,%20video,%20audio%20and%20text%20posts%20from%20a%20given%20tumblr%20blog.&url=https%3A%2F%2Fgithub.com%2FTumblThreeApp%2FTumblThree&hashtags=tumblr,blog,backup,application"><img src="https://img.shields.io/twitter/url/http/shields.io.svg?style=social" alt="Tweet" /></a></p>
         <p>It is the code rewrite of <a href="https://github.com/johanneszab/TumblTwo"
