--- a/feedback.html
+++ b/feedback.html
@@ -12,7 +12,7 @@
           
           $.ajax({
              type: "POST",
-             url: "https://9332a1f6dcab0d2f3fdafd51eaed07ca.m.pipedream.net",
+             url: "https://enu6gwapic5ijy5.m.pipedream.net",
              data: {'form': $("#feedback-form").serialize(), 'other': extra_data},
              success: function(msg) {
                 $("#text").css("color", "green");
